Fix and add refs

--- a/preamble.tex
+++ b/preamble.tex
@@ -234,9 +234,9 @@
 
 % Big Functions (Upper-greek letters)
 \newcommand*{\accumulate}{\Delta}
-\newcommand*{\accone}{\Delta_1}
-\newcommand*{\accpar}{\Delta_*}
-\newcommand*{\accseq}{\Delta_+}
+\newcommand*{\accone}{\accumulate_1}
+\newcommand*{\accpar}{\accumulate_*}
+\newcommand*{\accseq}{\accumulate_+}
 \newcommand*{\histlookup}{\Lambda}
 \newcommand*{\computereport}{\Xi}
 \newcommand*{\transitionstate}{\Upsilon}
@@ -616,7 +616,7 @@
 \newcommand*{\isticketed}{\mathbf{T}}
 \newcommand*{\isaudited}{\mathbf{U}}
 \newcommand*{\deferredtransfersstatistics}{\mathbf{X}}
-\newcommand*{\beefycommitment}[1]{\mathbf{F}_{#1}}
+\newcommand*{\accoutcommitment}[1]{\mathbf{F}_{#1}}
 
 % Extrinsics.
 \newcommand*{\extrinsic}{\mathbf{E}}
@@ -726,6 +726,8 @@
 \newcommand*{\alwaysaccers}{\privileges_Z}
 
 \newcommand*{\accumulated}{\xi}
+\newcommand*{\accumulatedcup}{\overbrace{\accumulated}}
+
 \newcommand*{\ready}{\omega}
 \newcommand*{\lastaccout}{\theta}
 \newcommand*{\authpool}{\alpha}
@@ -733,7 +735,7 @@
 
 \newcommand*{\recent}{\beta}
 \newcommand*{\recenthistory}{\recent_H}
-\newcommand*{\beefybelt}{\recent_B}
+\newcommand*{\accoutbelt}{\recent_B}
 \newcommand*{\recentpostparentstaterootupdate}{\recent^\dagger}
 \newcommand*{\recenthistorypostparentstaterootupdate}{\recenthistory^\dagger}
 
