--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -140,7 +140,7 @@ The state's good-set, bad-set and wonky-set assimilate the hashes of the reports
     }{
       \tup{\vs¬reporthash, \floor{\onethird\Cvalcount}} \in \verdicts
     }} \\
-  \label{eq:offenderssetdef}
+  \label{eq:offendersdef}
   \offenders' &\equiv \offenders \cup \set{\build{
       \¬offenderindex
     }{
