--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -27,7 +27,7 @@ The state serialization is then defined as the dictionary built from the amalgam
       }{
         \tup{\rh¬headerhash, \rh¬accoutlogsuperpeak, \rh¬stateroot, \rh¬reportedpackagehashes} \orderedin \recenthistory
       }}},
-      \mmrencode{\beefybelt}
+      \mmrencode{\accoutbelt}
     } \;, \\
     &&C(4) &\mapsto \encode{
       \pendingset,
