--- a/context.tex
+++ b/context.tex
@@ -1,2 +1,2 @@
-\renewcommand*{\jamdraftversionstring}{\jamdraftversion$^\accumulate$}
+\renewcommand*{\jamdraftversionstring}{\jamdraftversion$^\Delta$}
 \renewcommand*{\makegpbackground}{}
